# Agent-for-Learning

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
scripts/: docker-up.sh  setup.sh
src/learning_assistant/: __init__.py
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_chat_api.py  test_chat_stream_api.py  test_exception_middleware.py  test_health_api.py  test_protected_routes.py  test_rag_api.py  test_response_builder.py  test_search_api.py  test_upload_api.py
tests/application/: test_agent_orchestrator.py  test_chat_usecase.py  test_dto.py  test_factories.py  test_health_check.py  test_memory_manager.py  test_pdf_upload_usecase.py  test_rag_chat_usecase.py  test_rag_orchestrator.py  test_search_usecase.py  test_session_manager.py  test_tool_orchestrator.py  test_usecase_errors.py
tests/frontend/: test_api_client.py  test_chat_state.py  test_components.py  test_i18n.py  test_mock_streamlit.py  test_pages_logic.py  test_rag_state.py  test_session_service.py  test_ui_settings.py  test_upload_state.py
tests/integration/: test_react_agent.py
tests/mcp/: mock_mcp_server.py  test_agent_mcp_integration.py  test_capability_manager.py  test_discovery.py  test_http_transport.py  test_mcp_client.py  test_mcp_servers.py  test_prompt_adapter.py  test_protocol.py  test_resource_adapter.py  test_tool_adapter.py  test_tool_provider.py
tests/mocks/: mock_llm.py  mock_search.py  mock_tool.py
tests/rag/: test_agent_rag_integration.py  test_chunk_processor.py  test_citation_pipeline.py  test_document_indexer.py  test_embedding_factory.py  test_embedding_provider.py  test_factories.py  test_mock_embedding.py  test_rag_pipeline.py  test_retrieval_pipeline.py  test_retriever.py  test_similarity_search.py  test_vector_store.py  (+2 more)
(+224 files in other folders)
