[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learning-assistant-agent"
version = "0.1.0"
description = "AI-powered PDF & Web Search Study Companion"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "openai>=1.0,<2.0",
    "tavily-python>=0.3,<1.0",
    "pypdf>=4.0,<6.0",
    "duckduckgo-search>=6.0,<8.0",
    "jinja2>=3.1,<4.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
frontend = [
    "streamlit>=1.30,<2.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
learning-assistant-api = "learning_assistant.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/learning_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["learning_assistant"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["chromadb", "sentence_transformers"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/learning_assistant"]

[tool.coverage.report]
fail_under = 80
show_missing = true
